object-fit working + w3c validation on desktop version

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -34,7 +35,7 @@
                         <i class="resize-18 color-black fa-solid fa-location-dot" aria-hidden="true"></i>
                     </div>
                     <div class="container-form">
-                        <form method="get" action="">
+                        <form method="get">
                             <input type="search" id="city-search-id" name="city" placeholder="Marseille, France">
                         </form>
                     </div>
@@ -65,19 +66,16 @@
                     <p class="link-footer">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
- 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
                     <h1>Hébergements à Marseille</h1>
                     <div class="hebergements-cards">
-                        <a href="#">
-                            <article class="card">
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-
-                                        <h3 class="card-title">Hôtel du port</h3>
-                                        <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
-
+                                    <h3 class="card-title">Hôtel du port</h3>
+                                    <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                                     <div class="card-rating">
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -87,16 +85,14 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
+                            </a>
+                        </article>
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-
-                                        <div class="card-title">Hôtel chez Amina</div>
-                                        <div class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></div>
-
+                                    <div class="card-title">Hôtel chez Amina</div>
+                                    <div class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></div>
                                     <div class="card-rating">
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -106,16 +102,14 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
+                            </a>
+                        </article>
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-
-                                        <div class="card-title">Hôtel Les Mouettes</div>
-                                        <div class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></div>
-
+                                    <div class="card-title">Hôtel Les Mouettes</div>
+                                    <div class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></div>
                                     <div class="card-rating">
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -125,16 +119,14 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
+                            </a>
+                        </article>
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-
-                                        <div class="card-title">Hôtel de la mer</div>
-                                        <div class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></div>
-
+                                    <div class="card-title">Hôtel de la mer</div>
+                                    <div class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></div>
                                     <div class="card-rating">
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -144,16 +136,14 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
+                            </a>
+                        </article>
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
-                                <div class="card-content">
-
-                                        <div class="card-title">Auberge de la Canebière</div>
-                                        <div class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></div>
-
+                                <div class="card-content">             
+                                    <div class="card-title">Auberge de la Canebière</div>
+                                    <div class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></div>
                                     <div class="card-rating">
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
@@ -163,29 +153,27 @@
                                         <span class="sr-only">Note de 4 sur 5</span>
                                     </div>
                                 </div>
-                            </article>
-                        </a>
-                        <a href="#">
-                            <article class="card">
+                            </a>
+                        </article>
+                        <article class="card">
+                            <a href="#">
                                 <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-content">
-
-                                        <div class="card-title">Auberge le Panier</div>
-                                        <div class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></div>
-
-                                    <div class="card-rating">
-                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span>
-                                    </div>
+                                    <div class="card-title">Auberge le Panier</div>
+                                    <div class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></div>
+                                <div class="card-rating">
+                                    <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="color-main fa-solid fa-star" aria-hidden="true"></i>
+                                    <i class="color-main fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                    <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
-                            </article>
-                        </a> 
-                    </div>
-                    <a href="#" class="hebergements-footer">Afficher plus</a>                                             
+                            </div>
+                        </a>
+                    </article>
+                </div>
+                <a href="#" class="hebergements-footer">Afficher plus</a>                                             
                 </section>
 
                 <section class="populaires">
@@ -253,41 +241,36 @@
                         </a>
                     </div>
                 </section>
-            </div>
-           
-            <section class="activities-all">
+            </div>         
+            <section class="activities">
                 <h1>Activités à Marseille</h1>
-                <section class="activities">
-                    <div class="activities-cards">
+                <div class="activities-cards">                   
+                    <article class="activity-card">
                         <a href="#">
-                            <article class="activity-card">
-                                <img src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port">
-                                <h3 class="activities-text">Vieux-Port</h3>
-                            </article>
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port">
+                            <h3 class="activities-text">Vieux-Port</h3>
                         </a>
-                        <a href="#">
-                            <article class="activity-card">
-                                <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
-                                <h3 class="activities-text">Fort de Pomègues</h3>
-                            </article>
+                    </article>  
+                    <article class="activity-card">
+                        <a href="#" >
+                            <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
+                            <h3 class="activities-text">Fort de Pomègues</h3>
                         </a>
-                        <a href="#">
-                            <article class="activity-card">
-                                <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du Parc national des Calanques">
-                                <h3 class="activities-text">Parc national des Calanques</h3>
-                            </article>
+                    </article>
+                    <article class="activity-card">
+                        <a href="#" >
+                            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du Parc national des Calanques">
+                            <h3 class="activities-text">Parc national des Calanques</h3>
                         </a>
-                        <a href="#">
-                            <article class="activity-card">
-                                <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-De-La-Garde">
-                                <h3 class="activities-text">Notre-Dame-De-La-Garde</h3>
-                            </article>
-                        </a>                                                                        
-                    </div>
-                </section>
-
+                    </article>
+                    <article class="activity-card">
+                        <a href="#" >
+                            <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-De-La-Garde">
+                            <h3 class="activities-text">Notre-Dame-De-La-Garde</h3>
+                        </a>
+                    </article>                                                                  
+                </div>
             </section>
-
         </main>
         <footer>
             <div class="footer-container">
@@ -307,9 +290,7 @@
                 <a href="#">Conditions générales</a>
                 <a href="#">Données et confidenttialités</a>
             </div>               
-
         </footer>
     </div>
 </body>
-
 </html>
