gitignore and step 4 Form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="main-container">
+    <div class="body-container">
         <header>
             <img class="booki" src="./images/logo/Booki.png" alt="Logo Booki">
             <nav>
@@ -248,25 +248,25 @@
                     <article class="activity-card">
                         <a href="#">
                             <img src="./images/activites/reno-laithienne.jpg" alt="Image du Vieux-Port">
-                            <h3 class="activities-text">Vieux-Port</h3>
+                            <h4 class="activities-text">Vieux-Port</h4>
                         </a>
                     </article>  
                     <article class="activity-card">
                         <a href="#" >
                             <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de Pomègues">
-                            <h3 class="activities-text">Fort de Pomègues</h3>
+                            <h4 class="activities-text">Fort de Pomègues</h4>
                         </a>
                     </article>
                     <article class="activity-card">
                         <a href="#" >
                             <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du Parc national des Calanques">
-                            <h3 class="activities-text">Parc national des Calanques</h3>
+                            <h4 class="activities-text">Parc national des Calanques</h4>
                         </a>
                     </article>
                     <article class="activity-card">
                         <a href="#" >
                             <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-De-La-Garde">
-                            <h3 class="activities-text">Notre-Dame-De-La-Garde</h3>
+                            <h4 class="activities-text">Notre-Dame-De-La-Garde</h4>
                         </a>
                     </article>                                                                  
                 </div>
@@ -277,7 +277,7 @@
                 <div class="hebergements-footer">A propos</div>
                 <a href="#">Fonctionnement du site</a>
                 <a href="#">Conditions générales</a>
-                <a href="#">Données et confidenttialités</a>
+                <a href="#">Données et confidentialités</a>
             </div>
             <div class="footer-container">
                 <div class="hebergements-footer">Nos hébergements</div>
