media queries part 2

--- a/index.html
+++ b/index.html
@@ -40,24 +40,28 @@
                         </form>
                     </div>
                     <button id="button-search-right-id" class="button-search-right" >Rechercher</button>
+                    <div class="mini-button-container">
                     <button id="button-search-right-mini-id" class="button-search-right-mini">
                         <i class="fa-lg fa-solid fa-magnifying-glass color-white" aria-hidden="true"></i>
                     </button>
+                    </div>
                 </div>
                 <div class="filters">
-                    <h3>Filtres</h3>
-                    <button id="button-bill-id" class="button-filter">
-                        <i class="fa-lg color-main fa-solid fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
-                    </button>
-                    <button id="button-person-id" class="button-filter">
-                        <i class="fa-lg color-main fa-solid fa-person" aria-hidden="true"></i>Familial
-                    </button>
-                    <button id="button-heart-id" class="button-filter">
-                        <i class="fa-lg color-main fa-solid fa-heart" aria-hidden="true"></i>Romantique
-                    </button> 
-                    <button id="button-fire-id" class="button-filter">
-                        <i class="fa-lg color-main fa-solid fa-fire" aria-hidden="true"></i>Nos pépites
-                    </button>                             
+                    <h2 class="filter-title">Filtres</h2>
+                    <div class="filter-buttons">
+                        <button id="button-bill-id" class="button-filter">
+                            <i class="fa-lg color-main fa-solid fa-money-bill-wave" aria-hidden="true"></i>&Eacute;conomique
+                        </button>
+                        <button id="button-person-id" class="button-filter">
+                            <i class="fa-lg color-main fa-solid fa-person" aria-hidden="true"></i>Familial
+                        </button>
+                        <button id="button-heart-id" class="button-filter">
+                            <i class="fa-lg color-main fa-solid fa-heart" aria-hidden="true"></i>Romantique
+                        </button> 
+                        <button id="button-fire-id" class="button-filter">
+                            <i class="fa-lg color-main fa-solid fa-fire" aria-hidden="true"></i>Nos pépites
+                        </button>
+                    </div>                           
                 </div>
                 <div class="info-bar">
                     <div class="info-left">
