--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="body-container">
         <header>
-            <img class="booki" src="./images/logo/Booki.png" alt="Logo Booki">
+            <img class="logo-booki" src="./images/logo/Booki.png" alt="Logo Booki">
             <nav>
                 <a href="#hebergements-id" class="nav-title">Hébergements</a>
                 <a href="#activities-id" class="nav-title">Activités</a>
@@ -27,8 +27,8 @@
         <main>
             <section class="info">
                 <div class="headline">
-                    <h1 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h1>
-                    <h5 class="link-footer">En plein centre ville ou en pleine nature</h5>
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <h5>En plein centre ville ou en pleine nature</h5>
                 </div>
                 <div class="search-bar">
                     <div class="search-left">
