--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <i class="resize-18 color-black fa-solid fa-location-dot" aria-hidden="true"></i>
                     </div>
                     <div class="container-form">
-                        <form method="get" action="">
+                        <form method="get">
                             <input type="search" id="city-search-id" name="city" placeholder="Marseille, France">
                         </form>
                     </div>
