--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <div class="hebergements-footer">A propos</div>
                 <a href="#">Fonctionnement du site</a>
                 <a href="#">Conditions générales</a>
-                <a href="#">Données et confidentialités</a>
+                <a href="#">Données et confidentialité</a>
             </div>
             <div class="footer-container">
                 <div class="hebergements-footer">Nos hébergements</div>
